--- a/mongo-rs/compose.yml
+++ b/mongo-rs/compose.yml
@@ -63,9 +63,13 @@ services:
     ports:
       - "8080:8080"
 
+networks:
+  default:
+    name: shared-net
+    external: true
+    driver: bridge
+
 volumes:
   mongo-rs-1-data:
   mongo-rs-2-data:
   mongo-rs-3-data:
-
-
