--- a/dep0/consul/compose.yml
+++ b/dep0/consul/compose.yml
@@ -2,40 +2,36 @@
 services:
   consul-server-1:
     image: hashicorp/consul:latest
-    container_name: consul-server-1
     entrypoint: /entrypoint.sh
     environment:
       ARG_CONSUL_RETRY_JOIN: consul-server-2 consul-server-3
     volumes:
-      - consul-server-1-data:/consul/data
+      - consul-server-1-vol:/consul/data
       - ./entrypoint.sh:/entrypoint.sh:ro
     restart: unless-stopped
 
   consul-server-2:
     image: hashicorp/consul:latest
-    container_name: consul-server-2
     entrypoint: /entrypoint.sh
     environment:
       ARG_CONSUL_RETRY_JOIN: consul-server-1 consul-server-3
     volumes:
-      - consul-server-2-data:/consul/data
+      - consul-server-2-vol:/consul/data
       - ./entrypoint.sh:/entrypoint.sh:ro
     restart: unless-stopped
 
   consul-server-3:
     image: hashicorp/consul:latest
-    container_name: consul-server-3
     entrypoint: /entrypoint.sh
     environment:
       ARG_CONSUL_RETRY_JOIN: consul-server-1 consul-server-2
     volumes:
-      - consul-server-3-data:/consul/data
+      - consul-server-3-vol:/consul/data
       - ./entrypoint.sh:/entrypoint.sh:ro
     restart: unless-stopped
 
   consul-client:
     image: hashicorp/consul:latest
-    container_name: consul-client
     command:
       - agent
       - -ui
@@ -48,7 +44,7 @@ services:
       - "8500:8500" # HTTP API & UI
       - "8600:8600/udp" # DNS
     volumes:
-      - consul-client-data:/consul/data
+      - consul-client-vol:/consul/data
     restart: unless-stopped
     depends_on:
       - consul-server-1
@@ -62,7 +58,7 @@ networks:
     driver: bridge
 
 volumes:
-  consul-server-1-data:
-  consul-server-2-data:
-  consul-server-3-data:
-  consul-client-data:
+  consul-server-1-vol:
+  consul-server-2-vol:
+  consul-server-3-vol:
+  consul-client-vol:
