--- a/dep0/envoy-dfp/envoy-dfp.config.yml
+++ b/dep0/envoy-dfp/envoy-dfp.config.yml
@@ -12,6 +12,7 @@ static_resources:
                 "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                 stat_prefix: ingress_http
                 codec_type: AUTO
+                use_remote_address: true
                 route_config:
                   name: local_route
                   virtual_hosts:
