--- a/dep0/loki/compose.yml
+++ b/dep0/loki/compose.yml
@@ -7,7 +7,7 @@ services:
       - "3100:3100"
     volumes:
       - ./loki.config.yml:/etc/loki/local-config.yaml:ro
-      - loki-data:/loki
+      - loki-vol:/loki
     command: -config.file=/etc/loki/local-config.yaml
     restart: unless-stopped
 
@@ -18,4 +18,4 @@ networks:
     driver: bridge
 
 volumes:
-  loki-data:
+  loki-vol:
