--- a/dep0/envoy-dfp/envoy-dfp.config.yml
+++ b/dep0/envoy-dfp/envoy-dfp.config.yml
@@ -18,6 +18,15 @@ static_resources:
                   virtual_hosts:
                     - name: dynamic_forward_proxy_host
                       domains: ["*"]
+                      cors:
+                        allow_origin_string_match:
+                          - safe_regex:
+                              google_re2: {}
+                              regex: ".*"
+                        allow_methods: "GET, POST, PUT, PATCH, DELETE, OPTIONS"
+                        allow_headers: "*"
+                        expose_headers: "*"
+                        max_age: "86400"
                       routes:
                         - match:
                             prefix: "/"
@@ -55,6 +64,9 @@ static_resources:
                       dns_cache_config:
                         name: local_dns_cache
                         dns_lookup_family: V4_ONLY
+                  - name: envoy.filters.http.cors
+                    typed_config:
+                      "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                   - name: envoy.filters.http.router
                     typed_config:
                       "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
